--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
 
         <div> <!--Подпишитесь на рассылку-->
           <h3 class="footer-soc">Подпишитесь на рассылку</h3>
-          <input type="email" name="email" placeholder="E-mail" required />
+          <input class="footer-input" type="email" name="email" placeholder="E-mail" required />
           <button class="btn-footer"> Подписаться 
             <svg width="24" height="24" class="footer-send">
               <use xlink:href="./images/sprite.svg#icon-send-f"></use>
