--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
           <ul class="catalog list">
 
             <li class="catalog-item">
-              <a class="link" href="./">
+              <a class="catalog-link link" href="./">
                 <div class="catalog-image">       
                   <img src="./images-portfolio/img-1.svg" alt="">
 
@@ -83,7 +83,7 @@
             </li>
 
             <li class="catalog-item">
-              <a class="link" href="./">
+              <a class="catalog-link link" href="./">
                 <div class="catalog-image"> 
                   <img src="./images-portfolio/img-2.svg" alt="">
                 
@@ -100,7 +100,7 @@
             </li>
 
             <li class="catalog-item">
-              <a class="link" href="./">
+              <a class="catalog-link link" href="./">
                 <div class="catalog-image">
                   <img src="./images-portfolio/img-3.svg" alt="">
                   
@@ -118,7 +118,7 @@
             </li>
 
             <li class="catalog-item">
-              <a class="link" href="./">
+              <a class="catalog-link link" href="./">
                 <div class="catalog-image">
                   <img src="./images-portfolio/img-4.svg" alt="">
 
@@ -137,7 +137,7 @@
             </li>
 
             <li class="catalog-item">
-              <a class="link" href="./">
+              <a class="catalog-link link" href="./">
                 <div class="catalog-image">
                   <img src="./images-portfolio/img-5.svg" alt="">
                   <div class="text">
@@ -155,7 +155,7 @@
             </li>
 
             <li class="catalog-item">
-              <a class="link" href="./">
+              <a class="catalog-link link" href="./">
                 <div class="catalog-image">
                   <img src="./images-portfolio/img-6.svg" alt="">                
                   <div class="text">
@@ -172,7 +172,7 @@
             </li>
 
             <li class="catalog-item">
-              <a class="link" href="./">
+              <a class="catalog-link link" href="./">
                 <div class="catalog-image">
                   <img src="./images-portfolio/img-7.svg" alt="">              
                   <div class="text">
@@ -189,7 +189,7 @@
             </li>
 
             <li class="catalog-item">
-              <a class="link" href="./">
+              <a class="catalog-link link" href="./">
                 <div class="catalog-image">
                   <img src="./images-portfolio/img-8.svg" alt="">              
                   <div class="text">
@@ -207,7 +207,7 @@
             </li>
 
             <li class="catalog-item">
-              <a class="link" href="./">
+              <a class="catalog-link link" href="./">
                 <div class="catalog-image">
                   <img src="./images-portfolio/img-9.svg" alt="">              
                   <div class="text">
@@ -302,7 +302,7 @@
 
         <div> <!--Подпишитесь на рассылку-->
           <h3 class="footer-soc">Подпишитесь на рассылку</h3>
-          <input type="email" name="email" placeholder="E-mail" required />
+          <input class="footer-input" type="email" name="email" placeholder="E-mail" required />
           <button class="btn-footer"> Подписаться 
             <svg width="24" height="24" class="footer-send">
               <use xlink:href="./images/sprite.svg#icon-send-f"></use>
