--- a/index.html
+++ b/index.html
@@ -521,5 +521,6 @@
         <span class="goit">2020 | Developed by GoIT Students</span>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
