--- a/index.html
+++ b/index.html
@@ -524,21 +524,25 @@
     <div class="form js-speaker-form">
       <form class="form-list">
         <h3 class="form-title">Оставьте свои данные, мы вам перезвоним</h3>
-        <div class="form-field">
-          <label for="name">Имя</label>
-          <input type="text" name="name" id="name" placeholder="Иван Иванов" autofocus />
+        <div class="form-field">          
+          <input class="form-input" type="text" name="name" id="name" placeholder="" autofocus />
+          <label class="form-label" for="name">Имя</label>
+        </div>
+        <div class="form-field">          
+          <input class="form-input" type="tel" name="tel" id="tel" placeholder="" />
+          <label class="form-label" for="tel">Телефон</label>
+        </div>
+        <div class="form-field">          
+          <input class="form-input" type="email" name="mail" id="mail" placeholder="" />
+          <label class="form-label" for="mail">Почта</label>
         </div>
         <div class="form-field">
-          <label for="tel">Телефон</label>
-          <input type="tel" name="tel" id="tel" placeholder="+380**-000-00-00" />
-        </div>
-        <div class="form-field">
-          <label for="mail">Почта</label>
-          <input type="email" name="mail" id="mail" placeholder="my@mail.com" />
+          <label for="comment"></label>
+          <textarea class="comment" name="comment" id="comment" rows="8" placeholder="Коментарий"></textarea>
         </div>
         <div class="form-field">        
-          <input type="checkbox" name="policy" id="policy" placeholder="my@mail.com" />
-          <label for="policy">Соглашаюсь с рассылкой и принимаю <a class="agreement" href="./">Условия договора</a></label>
+          <input class="form-input" type="checkbox" name="policy" id="policy" placeholder="my@mail.com" />
+          <label class="form-label" for="policy">Соглашаюсь с рассылкой и принимаю <a class="agreement" href="./">Условия договора</a></label>
         </div>
       </form>
     </div>
