--- a/index.html
+++ b/index.html
@@ -521,53 +521,57 @@
     </footer>
 
     <!--Модальное окно-->
-    <div class="js-speaker-form" aria-autocomplete="off">
-      <form class="form">
-        <h3 class="form-title">Оставьте свои данные, мы вам перезвоним</h3>
-        <div class="form-field">          
-          <input class="form-input" type="text" name="name" id="name" placeholder=" " autofocus />
-          <label class="form-label" for="name">Имя</label>
-          <svg class="icon" width="18" height="18">
-            <use xlink:href="./images/sprite-1.svg#icon-Vector-name"></use>
+    <div  class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="close-modal" data-modal-close>
+          <svg width="18" height="18" class="icon-close">
+            <use href="./images/sprite-1.svg#icon-close-modal"></use>
           </svg>
-        </div>
-        <div class="form-field">          
-          <input class="form-input" type="tel" name="tel" id="tel" placeholder=" " />
-          <label class="form-label" for="tel">Телефон</label>
-          <svg class="icon" width="18" height="18">
-            <use xlink:href="./images/sprite-1.svg#icon-Vector-phone"></use>
-          </svg>
-        </div>
-        <div class="form-field">          
-          <input class="form-input" type="email" name="mail" id="mail" placeholder=" " />
-          <label class="form-label" for="mail">Почта</label>
-          <svg class="icon" width="18" height="18">
-            <use xlink:href="./images/sprite-1.svg#icon-Vector-emaile"></use>
-          </svg>
-        </div>
-        <div class="form-field">          
-          <textarea class="form-comment" name="comment" id="comment" rows="8" placeholder=" "></textarea>
-          <label class="form-comment-label" for="comment">Коментарий</label>
-        </div>
-        <!--
-        <div class="form-field">        
-          <input class="form-input" type="checkbox" name="policy" id="policy" placeholder="my@mail.com" />
-          <label class="form-label" for="policy">Соглашаюсь с рассылкой и принимаю <a class="agreement" href="./">Условия договора</a></label>
-        </div> -->
-
-        <label class="field">
-          <input class="checkbox" type="checkbox" name="topic" />
-          <span class="checkbox-icon"></span>
-            <span class="label"> Соглашаюсь с рассылкой и принимаю
-            <a class="agreement" href="./">Условия договора</a>
-          </span>
-        </label>
-
-        <button class="form-btn" type="submit">Отправить</button>
-      </form>
+        </button>
+          <div class="js-speaker-form" aria-autocomplete="off">
+            <form class="form">
+              <h3 class="form-title">Оставьте свои данные, мы вам перезвоним</h3>
+              <div class="form-field">
+                <input class="form-input" type="text" name="name" id="name" placeholder=" " autofocus />
+                <label class="form-label" for="name">Имя</label>
+                <svg class="icon" width="18" height="18">
+                  <use xlink:href="./images/sprite-1.svg#icon-Vector-name"></use>
+                </svg>
+              </div>
+              <div class="form-field">
+                <input class="form-input" type="tel" name="tel" id="tel" placeholder=" " />
+                <label class="form-label" for="tel">Телефон</label>
+                <svg class="icon" width="18" height="18">
+                  <use xlink:href="./images/sprite-1.svg#icon-Vector-phone"></use>
+                </svg>
+              </div>
+              <div class="form-field">
+                <input class="form-input" type="email" name="mail" id="mail" placeholder=" " />
+                <label class="form-label" for="mail">Почта</label>
+                <svg class="icon" width="18" height="18">
+                  <use xlink:href="./images/sprite-1.svg#icon-Vector-emaile"></use>
+                </svg>
+              </div>
+              <div class="form-field">
+                <textarea class="form-comment" name="comment" id="comment" rows="8" placeholder=" "></textarea>
+                <label class="form-comment-label" for="comment">Коментарий</label>
+              </div>
+              
+              <label class="field">
+                <input class="checkbox" type="checkbox" name="topic" />
+                <span class="checkbox-icon"></span>
+                <span class="label"> Соглашаюсь с рассылкой и принимаю
+                  <a class="agreement" href="./">Условия договора</a>
+                </span>
+              </label>
+          
+              <button class="form-btn" type="submit">Отправить</button>
+            </form>
+          </div>
+      </div>    
     </div>
 
-    <!-- отключить мод.окно
-    <script src="./js/modal.js"></script> -->
+    <!-- подключить мод.окно-->
+    <script src="./js/modal.js"></script> 
   </body>
 </html>
