--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
       <div class="modal">
         <button class="close-modal" data-modal-close>
           <svg width="18" height="18" class="icon-close">
-            <use href="./images/sprite-1.svg#icon-close-modal"></use>
+            <use href="./images/sprite.svg#icon-close-modal"></use>
           </svg>
         </button>
           <div class="js-speaker-form" aria-autocomplete="off">
@@ -534,22 +534,22 @@
               <div class="form-field">
                 <input class="form-input" type="text" name="name" id="name" placeholder=" " autofocus />
                 <label class="form-label" for="name">Имя</label>
-                <svg class="icon" width="18" height="18">
-                  <use xlink:href="./images/sprite-1.svg#icon-Vector-name"></use>
+                <svg class="icon-label" width="18" height="18">
+                  <use xlink:href="./images/sprite.svg#icon-Vector-name"></use>
                 </svg>
               </div>
               <div class="form-field">
                 <input class="form-input" type="tel" name="tel" id="tel" placeholder=" " />
                 <label class="form-label" for="tel">Телефон</label>
-                <svg class="icon" width="18" height="18">
-                  <use xlink:href="./images/sprite-1.svg#icon-Vector-phone"></use>
+                <svg class="icon-label" width="18" height="18">
+                  <use xlink:href="./images/sprite.svg#icon-Vector-phone"></use>
                 </svg>
               </div>
               <div class="form-field">
                 <input class="form-input" type="email" name="mail" id="mail" placeholder=" " />
                 <label class="form-label" for="mail">Почта</label>
-                <svg class="icon" width="18" height="18">
-                  <use xlink:href="./images/sprite-1.svg#icon-Vector-emaile"></use>
+                <svg class="icon-label" width="18" height="18">
+                  <use xlink:href="./images/sprite.svg#icon-Vector-emaile"></use>
                 </svg>
               </div>
               <div class="form-field">
