Правит модальное окно 5

--- a/index.html
+++ b/index.html
@@ -528,8 +528,8 @@
             <use href="./images/sprite.svg#icon-close-modal"></use>
           </svg>
         </button>
-          <div class="js-speaker-form" aria-autocomplete="off">
-            <form class="form">
+          <div class="js-speaker-form">
+            <form autocomplete="off"  class="form">
               <h3 class="form-title">Оставьте свои данные, мы вам перезвоним</h3>
               <div class="form-field">
                 <input class="form-input" type="text" name="name" id="name" placeholder=" " autofocus />
